# arifa

./: Cargo.toml  README.md
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: arifa_benchmarks.rs
benchmarks/src/: main.rs
example/: Cargo.toml  README.md
src/: lib.rs  metrics.rs  prelude.rs  router.rs  routing_table.rs  session.rs
src/models/: arifa.rs  event.rs  mod.rs
