[package]
name = "arifa-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
arifa = {path="../../open-source/arifa"}
tokio = { version = "1", features = ["full"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"


[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1"



[[bench]]
name = "arifa_benchmarks"
harness = false
