[package]
name = "axum-arifa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
arifa = "0.3.44"
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
actix-web = "4"
actix-ws = "0.3"
actix-web-actors = "4"

[[bin]]
name = "actix_web"
path = "src/bin/main_actix.rs"

[[bin]]
name = "axum"
path = "src/bin/main_axum.rs"
